fixed dark mode switch styling

--- a/JobSearch/static/css/home.css
+++ b/JobSearch/static/css/home.css
@@ -28,6 +28,13 @@ body {
   font-size: 1rem;
 }
 
+.main-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .button.see-more-button:hover {
   color: var(--white_1);
   background-color: var(--dark);
@@ -82,5 +89,9 @@ body {
 
   .button.see-more-button {
     font-size: 1rem;
+  }
+
+  .main-content {
+    gap: 1em;
   }
 }
